HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementPredicateImpure/Expected.uv
//! Expected diagnostic metadata for the RefinementPredicateImpure rejected-source specimen.

expectedDiagnostic("E-TYP-1954", "diag.14.RefinementTypes")
